--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #ea0d0d;
+  background-color: #db0dea;
   filter: blur(10vmin);
 }
 
@@ -180,7 +180,7 @@ body {
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
   background-color: #a7ffee;
-  background-image: linear-gradient(to top, #ea0d0d, #ea0d0d);
+  background-image: linear-gradient(to top, #db0dea, #db0dea);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
